--- a/menu.html
+++ b/menu.html
@@ -1,59 +1,99 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menu - La PiZz&rsquo; A r&eacute</title><link rel="stylesheet" href="style.css?v=4.0"></head>
+<title>Pizza - La PiZz&rsquo; A r&eacute</title><link rel="stylesheet" href="style.css?v=4.0"></head>
 <body>
   
 <header class="banner">
   <img src="images/banner.jpg" alt="Bannière">
 </header>
 
-<<nav>
+<nav class="nav bg-marbre"
   <button class="menu-toggle" onclick="toggleMenu()">☰</button>
   <div class="menu-links">
     <a href="index.html">Accueil</a>
-    <a href="traiteur.html" class="active">Traiteur</a> <!-- ✅ nouvel onglet -->
-    <a href="pizza.html">Les pizzas</a>
-    <a href="menu.html">La carte</a>
+    <a href="traiteur.html">Traiteur</a>
+    <a href="pizza.html"> pizzas</a>
+    <a href="menu.html" class="active">La carte</a>
     <a href="galerie.html">Galerie</a>
     <a href="contact.html">Contact</a>
     <a href="apropos.html">À propos</a>
   </div>
 </nav>
 
+<section class="menu-section">
+  <h2>Les plats à la carte</h2>
 
-<section >
-  <h2>Notre Menu</h2>
-  
-  <!-- Image vedette -->
+  <!-- Plat vedette -->
   <div class="featured-dish">
-    <img src="images/menu.jpg" alt="Pizza spéciale" class="show">
-    <h3>Pizza Prestige</h3>
-    <h3>Notre création signature avec mozzarella, truffe et jambon cru.</h3>
+    <img src="images/menu.jpg" alt="Le menu de la semaine">
+    <div class="dish-info">
+      <h3>Le menu de la semaine</h3>
+      <p>Tous les plats disponibles cette semaine</p>
+    </div>
   </div>
 
-  <div class="card">
-    <img src="images/pizza1.jpg" alt="Pizza Margherita">
-    <div><h3>Pizza Margherita</h3><h3>Sauce tomate, mozzarella, basilic.</h3></div>
-  </div>
+  <!-- Grille de cartes -->
+  <div class="cards-container">
+    <div class="card">
+      <img src="images/camembert.jpg" alt="Camembert">
+      <div class="card-info">
+        <h3>Camembert rôti</h3>
+        <p></p>
+      </div>
+    </div>
 
-  <div class="card">
-    <img src="images/pizza2.jpg" alt="Pizza Reine">
-    <div><h3>Pizza Reine</h3><h3>Sauce tomate, jambon, champignons, mozzarella.</h3></div>
-  </div>
+    <div class="card">
+      <img src="images/brochettes.jpg" alt="Pizza Reine">
+      <div class="card-info">
+        <h3>Brochettes de rumsteck 😍😍😍😍</h3>
+        <p></p>
+      </div>
+    </div>
 
-  <div class="card">
-    <img src="images/pizza3.jpg" alt="Pizza 4 Fromages">
-    <div><h3>Pizza 4 Fromages</h3><h3>Mozzarella, gorgonzola, parmesan, emmental.</h3></div>
+    <div class="card">
+      <img src="images/pizza3.jpg" alt="Pizza 4 Fromages">
+      <div class="card-info">
+        <h3>Pizza 4 Fromages</h3>
+        <p>Mozzarella, gorgonzola, parmesan, emmental.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="images/pizza4.jpg" alt="Pizza Végétarienne">
+      <div class="card-info">
+        <h3>Pizza Végétarienne</h3>
+        <p>Légumes grillés, mozzarella, olives.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="images/pizza5.jpg" alt="Pizza Calzone">
+      <div class="card-info">
+        <h3>Pizza Calzone</h3>
+        <p>Tomate, mozzarella, jambon, champignons, pliée au four.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="images/pizza6.jpg" alt="Pizza Diavola">
+      <div class="card-info">
+        <h3>Pizza Diavola</h3>
+        <p>Sauce tomate, salami piquant, mozzarella.</p>
+      </div>
+    </div>
   </div>
 </section>
+
   
 <h1 class="site-title-bas">La PiZz&rsquo; A r&eacute</h1>
-<footer>
-   <p>© 2025 La PiZz&rsquo; A r&eacute - Tous droits réservés - Auteur : Francis Glavieux</p>
+
+<footer class="bg-marbre-footer" 
+        style="--marbre-speed:0.6; --marbre-opacity-speed:0.08; --marbre-opacity-min:0.5; --marbre-opacity-max:1;">
+  <p>© 2025 La PiZz&rsquo; A r&eacute; - Tous droits réservés - Webdesigner : Francis Glavieux</p>
   <div class="social-links">
-        <a href="confidentialite.html">Politique de confidentialité</a>
-      <a href="mentions-legales.html">Mentions légales</a>
+    <a href="confidentialite.html">Politique de confidentialité</a>
+    <a href="mentions-legales.html">Mentions légales</a>
     <a href="https://www.facebook.com/profile.php?id=100063309090268" target="_blank" aria-label="Facebook">
       <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
         <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.351C0 23.4.6 24 1.325 
@@ -68,6 +108,7 @@
   </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="script.js?v=4.0" defer></script>
 
-</body></html>
+</body>
+</html>
