--- a/merci.html
+++ b/merci.html
@@ -27,11 +27,14 @@
 </section>
 
 <h1 class="site-title-bas">La PiZz&rsquo; A r&eacute</h1>
-<footer>
-   <div class="social-links">
-        <a href="confidentialite.html">Politique de confidentialité</a>
-      <a href="mentions-legales.html">Mentions légales</a>
-      <a href="https://www.facebook.com/profile.php?id=100063309090268" target="_blank" aria-label="Facebook">
+
+<footer class="bg-marbre-footer" 
+        style="--marbre-speed:0.6; --marbre-opacity-speed:0.08; --marbre-opacity-min:0.5; --marbre-opacity-max:1;">
+  <p>© 2025 La PiZz&rsquo; A r&eacute; - Tous droits réservés - Webdesigner : Francis Glavieux</p>
+  <div class="social-links">
+    <a href="confidentialite.html">Politique de confidentialité</a>
+    <a href="mentions-legales.html">Mentions légales</a>
+    <a href="https://www.facebook.com/profile.php?id=100063309090268" target="_blank" aria-label="Facebook">
       <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
         <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.351C0 23.4.6 24 1.325 
         24h11.495v-9.294H9.691v-3.622h3.129V8.413c0-3.1 
@@ -45,7 +48,7 @@
   </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="script.js?v=4.0" defer></script>
 
 </body>
 </html>
