--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,15 @@
   <img src="images/banner.jpg" alt="Bannière">
 </header>
 
-<<nav>
+<nav class="nav bg-marbre"
   <button class="menu-toggle" onclick="toggleMenu()">☰</button>
   <div class="menu-links">
     <a href="index.html">Accueil</a>
-    <a href="traiteur.html" class="active">Traiteur</a> <!-- ✅ nouvel onglet -->
+    <a href="traiteur.html">Traiteur</a>
     <a href="pizza.html">Les pizzas</a>
     <a href="menu.html">La carte</a>
     <a href="galerie.html">Galerie</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="active">Contact</a>
     <a href="apropos.html">À propos</a>
   </div>
 </nav>
@@ -119,11 +119,13 @@
 </section>
 
 <h1 class="site-title-bas">La PiZz&rsquo; A r&eacute</h1>
-<footer>
-   <p>© 2025 La PiZz&rsquo; A r&eacute - Tous droits réservés - Auteur : Francis Glavieux</p>
+
+<footer class="bg-marbre-footer" 
+        style="--marbre-speed:0.6; --marbre-opacity-speed:0.08; --marbre-opacity-min:0.5; --marbre-opacity-max:1;">
+  <p>© 2025 La PiZz&rsquo; A r&eacute; - Tous droits réservés - Webdesigner : Francis Glavieux</p>
   <div class="social-links">
-      <a href="confidentialite.html">Politique de confidentialité</a>
-      <a href="mentions-legales.html">Mentions légales</a>
+    <a href="confidentialite.html">Politique de confidentialité</a>
+    <a href="mentions-legales.html">Mentions légales</a>
     <a href="https://www.facebook.com/profile.php?id=100063309090268" target="_blank" aria-label="Facebook">
       <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
         <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.351C0 23.4.6 24 1.325 
@@ -138,7 +140,7 @@
   </div>
 </footer>
 
-<!-- Appel du script -->
-<script src="script.js?v=3.0" defer></script>
+<script src="script.js?v=4.0" defer></script>
+
 </body>
 </html>
