--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Ajout du bloc avec fond noir comme sur le menu -->
   <div class="featured-dish home-featured">
-    <img src="images/boutique.jpg" alt="Boutique" class="show"><
+    <img src="images/boutique.jpg" alt="Boutique" class="show">
      <img src="images/boutique-2.jpg" alt="Boutique" class="show">
     <h3>Notre Boutique</h3>
     <p>Un lieu convivial pour savourer nos spécialités.</p>
@@ -76,4 +76,3 @@
 
 </body>
 </html>
-
