--- a/puzzle2.html
+++ b/puzzle2.html
@@ -13,22 +13,21 @@
       align-items:center;
       justify-content:center;
     }
-   canvas {
-  background:transparent;
-  display:block;      /* au lieu de flex */
-  width: 100%;         /* ✅ responsive */
-  height: auto;        /* ✅ garde les proportions */
-  max-width: 600px;    /* ✅ limite sur grands écrans */
-  aspect-ratio: 1/1;   /* ✅ évite les déformations */
-  border-radius:12px;
-  box-shadow:0 10px 30px rgba(0,0,0,.3);
-  cursor:grab;
-}
+    canvas {
+      background:transparent;
+      display:block;
+      width: 100%;
+      height: auto;
+      max-width: 600px;
+      border-radius:12px;
+      box-shadow:0 10px 30px rgba(0,0,0,.3);
+      cursor:grab;
+    }
     canvas:active { cursor:grabbing; }
   </style>
 </head>
 <body>
-  <canvas id="puzzleCanvas" width="600" height="600"></canvas>
+  <canvas id="puzzleCanvas"></canvas>
 
 <script>
 const IMG_SRC = "logo3d.png"; // ton image dans le même dossier
@@ -82,6 +81,7 @@ function isInside(piece, mx, my) {
   return mx>piece.x && mx<piece.x+piece.w && my>piece.y && my<piece.y+piece.h;
 }
 
+// ✅ SOURIS : mousedown
 canvas.addEventListener("mousedown", e=>{
   const rect = canvas.getBoundingClientRect();
   const mx = e.clientX - rect.left;
@@ -93,12 +93,13 @@ canvas.addEventListener("mousedown", e=>{
       offsetX=mx-p.x;
       offsetY=my-p.y;
       pieces.splice(i,1);
-      pieces.push(p); // bring to front
+      pieces.push(p);
       break;
     }
   }
 });
 
+// ✅ SOURIS : mousemove
 canvas.addEventListener("mousemove", e=>{
   if(dragging){
     const rect = canvas.getBoundingClientRect();
@@ -110,9 +111,55 @@ canvas.addEventListener("mousemove", e=>{
   }
 });
 
+// ✅ SOURIS : mouseup
 canvas.addEventListener("mouseup", ()=>{
   if(dragging){
-    // snap to target if close
+    if(Math.abs(dragging.x-dragging.tx)<20 && Math.abs(dragging.y-dragging.ty)<20){
+      dragging.x = dragging.tx;
+      dragging.y = dragging.ty;
+      dragging.placed = true;
+    }
+    dragging=null;
+    draw();
+  }
+});
+
+// ✅ ✅ ✅ AJOUT MOBILE : touchstart
+canvas.addEventListener("touchstart", e=>{
+  const touch = e.touches[0];
+  const rect = canvas.getBoundingClientRect();
+  const mx = touch.clientX - rect.left;
+  const my = touch.clientY - rect.top;
+  for(let i=pieces.length-1;i>=0;i--){
+    const p=pieces[i];
+    if(isInside(p,mx,my) && !p.placed){
+      dragging=p;
+      offsetX=mx-p.x;
+      offsetY=my-p.y;
+      pieces.splice(i,1);
+      pieces.push(p);
+      break;
+    }
+  }
+});
+
+// ✅ MOBILE : touchmove
+canvas.addEventListener("touchmove", e=>{
+  if(dragging){
+    e.preventDefault(); // évite le scroll
+    const touch = e.touches[0];
+    const rect = canvas.getBoundingClientRect();
+    const mx = touch.clientX - rect.left;
+    const my = touch.clientY - rect.top;
+    dragging.x = mx-offsetX;
+    dragging.y = my-offsetY;
+    draw();
+  }
+}, { passive: false });
+
+// ✅ MOBILE : touchend
+canvas.addEventListener("touchend", ()=>{
+  if(dragging){
     if(Math.abs(dragging.x-dragging.tx)<20 && Math.abs(dragging.y-dragging.ty)<20){
       dragging.x = dragging.tx;
       dragging.y = dragging.ty;
@@ -124,15 +171,15 @@ canvas.addEventListener("mouseup", ()=>{
 });
 
 img.onload = ()=>{
-  // Ajuste la taille du canvas selon l'écran
   const size = Math.min(window.innerWidth, window.innerHeight, 600);
   canvas.width = size;
   canvas.height = size;
+  canvas.style.width = size + "px";
+  canvas.style.height = size + "px";
 
   buildPieces();
   draw();
 };
-
 </script>
 </body>
 </html>
