--- a/puzzle2.html
+++ b/puzzle2.html
@@ -30,7 +30,7 @@
   <canvas id="puzzleCanvas"></canvas>
 
 <script>
-const IMG_SRC = "logo3d.png"; // ton image dans le même dossier
+const IMG_SRC = "logo3d.png";
 const canvas = document.getElementById('puzzleCanvas');
 const ctx = canvas.getContext('2d', { alpha: true });
 
@@ -52,14 +52,19 @@ function buildPieces() {
       const sy = r*pieceH;
       const sw = (c===cols-1) ? img.width - sx : pieceW;
       const sh = (r===rows-1) ? img.height - sy : pieceH;
+
+      const targetW = canvas.width/cols;
+      const targetH = canvas.height/rows;
+
       pieces.push({
         sx, sy, sw, sh,
-        x: Math.random()*(canvas.width-150),
-        y: Math.random()*(canvas.height-150),
-        tx: c*(canvas.width/cols),
-        ty: r*(canvas.height/rows),
-        w: canvas.width/cols,
-        h: canvas.height/rows,
+        // ✅ Apparition toujours dans la zone visible
+        x: Math.random() * (canvas.width - targetW),
+        y: Math.random() * (canvas.height - targetH),
+        tx: c * targetW,
+        ty: r * targetH,
+        w: targetW,
+        h: targetH,
         placed:false
       });
     }
@@ -81,7 +86,13 @@ function isInside(piece, mx, my) {
   return mx>piece.x && mx<piece.x+piece.w && my>piece.y && my<piece.y+piece.h;
 }
 
-// ✅ SOURIS : mousedown
+// ✅ Empêche la sortie du canvas
+function clampPiece(p) {
+  p.x = Math.max(0, Math.min(p.x, canvas.width - p.w));
+  p.y = Math.max(0, Math.min(p.y, canvas.height - p.h));
+}
+
+// ---- Souris ----
 canvas.addEventListener("mousedown", e=>{
   const rect = canvas.getBoundingClientRect();
   const mx = e.clientX - rect.left;
@@ -99,7 +110,6 @@ canvas.addEventListener("mousedown", e=>{
   }
 });
 
-// ✅ SOURIS : mousemove
 canvas.addEventListener("mousemove", e=>{
   if(dragging){
     const rect = canvas.getBoundingClientRect();
@@ -107,11 +117,11 @@ canvas.addEventListener("mousemove", e=>{
     const my = e.clientY - rect.top;
     dragging.x = mx-offsetX;
     dragging.y = my-offsetY;
+    clampPiece(dragging);
     draw();
   }
 });
 
-// ✅ SOURIS : mouseup
 canvas.addEventListener("mouseup", ()=>{
   if(dragging){
     if(Math.abs(dragging.x-dragging.tx)<20 && Math.abs(dragging.y-dragging.ty)<20){
@@ -124,7 +134,7 @@ canvas.addEventListener("mouseup", ()=>{
   }
 });
 
-// ✅ ✅ ✅ AJOUT MOBILE : touchstart
+// ---- Événements tactiles ----
 canvas.addEventListener("touchstart", e=>{
   const touch = e.touches[0];
   const rect = canvas.getBoundingClientRect();
@@ -143,21 +153,20 @@ canvas.addEventListener("touchstart", e=>{
   }
 });
 
-// ✅ MOBILE : touchmove
 canvas.addEventListener("touchmove", e=>{
   if(dragging){
-    e.preventDefault(); // évite le scroll
+    e.preventDefault();
     const touch = e.touches[0];
     const rect = canvas.getBoundingClientRect();
     const mx = touch.clientX - rect.left;
     const my = touch.clientY - rect.top;
     dragging.x = mx-offsetX;
     dragging.y = my-offsetY;
+    clampPiece(dragging);
     draw();
   }
 }, { passive: false });
 
-// ✅ MOBILE : touchend
 canvas.addEventListener("touchend", ()=>{
   if(dragging){
     if(Math.abs(dragging.x-dragging.tx)<20 && Math.abs(dragging.y-dragging.ty)<20){
