--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <a href="apropos.html">À propos</a>
   </div>
 </nav>
-
 <main>
 <section class="welcome-section">
   <h2>Bienvenue à La PiZz&rsquo; A r&eacute;</h2>
@@ -36,9 +35,12 @@
      <img src="images/boutique-2.jpg" alt="Boutique" class="show">
     <h3>Notre Boutique</h3>
     <p>Un lieu convivial pour savourer nos spécialités.</p>
-     <div class="featured-dish"><iframe src="puzzle2.html" width="600" height="600"></iframe></div>
-     <h3>Essayez notre puzzle interactif pour découvrir le logo 3D !</h3>
-  </div>
+    </div>
+    <div class="puzzle-container">
+  <canvas id="puzzleCanvas"></canvas>
+  <h3>Essayez notre puzzle interactif pour découvrir le logo 3D !</h3>
+  <script src="puzzle.js"></script>
+</div>
 </section>
 
 
